--- a/tutorials/rabi_oscillations_in_tls/index.html
+++ b/tutorials/rabi_oscillations_in_tls/index.html
@@ -92,7 +92,7 @@
             <div class="section" itemprop="articleBody">
               
                 <h2 id="rabi-oscillations-in-tls">Rabi Oscillations in TLS</h2>
-<p>We study Rabi oscillations. First, in a single TLS. Then, we add this TLS to a graphene flake.</p>
+<p>We study Rabi oscillations in isolated two-level system.</p>
 <p>NOTE: this tutorial makes heavy use of the liberal way GRANAD lets you group orbitals. You might want to consult the tutorial on orbital lists first.</p>
 <h2 id="building-a-two-level-system">Building a two-level system</h2>
 <p>Consider an isolated atom, modelled as a two-level system. Each level is an orbital, so let's combine them in a list.</p>
@@ -151,7 +151,7 @@ wave = Wave(amplitudes=[0.05, 0, 0], frequency=2)</code></pre>
     end_time=10, relaxation_rate=1, illumination=wave, use_rwa=True
 )
 atom.show_energy_occupations(density_matrices, time=time)</code></pre>
-<p><img alt="png" src="rabi_oscillations_in_tls_files/rabi_oscillations_in_tls_16_0.png" /></p>
+<p><img alt="png" src="../rabi_oscillations_in_tls_files/rabi_oscillations_in_tls_16_0.png" /></p>
               
             </div>
           </div><footer>
