deploy: 460c4ffb175848c9b23c742ab54d544717cd7ac6

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
-          <a href="." class="icon icon-home"> GRANAD
+          <a href=".">
+          <img src="images/logo.png" class="logo" alt="Logo"/>
         </a><div role="search">
   <form id ="rtd-search-form" class="wy-form" action="./search.html" method="get">
       <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" title="Type search term here" />
@@ -206,5 +207,5 @@
 
 <!--
 MkDocs version : 1.6.0
-Build Date UTC : 2024-04-28 09:39:24.570316+00:00
+Build Date UTC : 2024-04-29 08:40:10.435182+00:00
 -->
