--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
-          <a href=".">
-          <img src="images/logo.png" class="logo" alt="Logo"/>
+          <a href="." class="icon icon-home"> GRANAD
         </a><div role="search">
   <form id ="rtd-search-form" class="wy-form" action="./search.html" method="get">
       <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" title="Type search term here" />
@@ -207,5 +206,5 @@
 
 <!--
 MkDocs version : 1.6.0
-Build Date UTC : 2024-04-29 08:51:15.601886+00:00
+Build Date UTC : 2024-04-29 12:08:10.441772+00:00
 -->
