--- a/tutorials/c_plotting/index.html
+++ b/tutorials/c_plotting/index.html
@@ -166,7 +166,9 @@ show_time_dependence(density_matrices, operator=None, time: jax.Array = None, in
 </span><span id="__span-3-9"><a id="__codelineno-3-9" name="__codelineno-3-9" href="#__codelineno-3-9"></a><span class="n">density_matrices_e</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">transform_to_energy_basis</span><span class="p">(</span> <span class="n">density_matrices</span> <span class="p">)</span>
 </span><span id="__span-3-10"><a id="__codelineno-3-10" name="__codelineno-3-10" href="#__codelineno-3-10"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_time_dependence</span><span class="p">(</span> <span class="n">density_matrices</span> <span class="o">=</span> <span class="n">density_matrices_e</span>  <span class="p">)</span>
 </span></code></pre></div>
-<p><img alt="png" src="../c_plotting_files/c_plotting_11_0.png" /></p>
+<div class="language-text highlight"><pre><span></span><code>RHS compiled
+</code></pre></div>
+<p><img alt="png" src="../c_plotting_files/c_plotting_11_1.png" /></p>
 <p>If we want, we can check that the correct excitation is set</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-4-1"><a id="__codelineno-4-1" name="__codelineno-4-1" href="#__codelineno-4-1"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_energies</span><span class="p">()</span>
 </span></code></pre></div>
