--- a/tutorials/h_rabi_oscillations/index.html
+++ b/tutorials/h_rabi_oscillations/index.html
@@ -141,7 +141,9 @@
 </span><span id="__span-1-8"><a id="__codelineno-1-8" name="__codelineno-1-8" href="#__codelineno-1-8"></a><span class="p">)</span>
 </span><span id="__span-1-9"><a id="__codelineno-1-9" name="__codelineno-1-9" href="#__codelineno-1-9"></a><span class="n">atom</span><span class="o">.</span><span class="n">show_time_dependence</span><span class="p">(</span><span class="n">density_matrices</span><span class="p">,</span> <span class="n">time</span><span class="o">=</span><span class="n">time</span><span class="p">)</span>
 </span></code></pre></div>
-<p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_5_0.png" /></p>
+<div class="language-text highlight"><pre><span></span><code>RHS compiled
+</code></pre></div>
+<p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_5_1.png" /></p>
 <h2 id="coupling-to-a-flake">Coupling to a Flake</h2>
 <p>We combine the TLS with a graphene flake in the top position above an atom.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-2-1"><a id="__codelineno-2-1" name="__codelineno-2-1" href="#__codelineno-2-1"></a><span class="n">graphene</span> <span class="o">=</span> <span class="n">MaterialCatalog</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;graphene&quot;</span><span class="p">)</span>
@@ -169,7 +171,9 @@
 </span><span id="__span-4-8"><a id="__codelineno-4-8" name="__codelineno-4-8" href="#__codelineno-4-8"></a><span class="n">density_matrices_e</span> <span class="o">=</span> <span class="n">flake_with_atom</span><span class="o">.</span><span class="n">transform_to_energy_basis</span><span class="p">(</span><span class="n">density_matrices</span><span class="p">)</span>
 </span><span id="__span-4-9"><a id="__codelineno-4-9" name="__codelineno-4-9" href="#__codelineno-4-9"></a><span class="n">flake_with_atom</span><span class="o">.</span><span class="n">show_time_dependence</span><span class="p">(</span> <span class="n">density_matrices_e</span><span class="p">,</span> <span class="n">time</span><span class="o">=</span><span class="n">time</span><span class="p">)</span>
 </span></code></pre></div>
-<p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_12_0.png" /></p>
+<div class="language-text highlight"><pre><span></span><code>RHS compiled
+</code></pre></div>
+<p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_12_1.png" /></p>
               
             </div>
           </div><footer>
