deploy: 7b8760cc69c19b3446ef8daadb24d6b9edb70f9b

--- a/tutorials/c_plotting/index.html
+++ b/tutorials/c_plotting/index.html
@@ -153,10 +153,12 @@
 </span><span id="__span-2-12"><a id="__codelineno-2-12" name="__codelineno-2-12" href="#__codelineno-2-12"></a><span class="n">plot_labels</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;j_x&#39;</span><span class="p">,</span> <span class="s1">&#39;j_y&#39;</span><span class="p">,</span> <span class="s1">&#39;j_z&#39;</span><span class="p">]</span> 
 </span><span id="__span-2-13"><a id="__codelineno-2-13" name="__codelineno-2-13" href="#__codelineno-2-13"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_res</span><span class="p">(</span> <span class="n">result</span><span class="p">,</span> <span class="n">plot_labels</span> <span class="o">=</span> <span class="n">plot_labels</span> <span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>finished timestep 0
-RHS compiled
+<div class="language-text highlight"><pre><span></span><code>RHS compiled
+
+
+100.0 %
 </code></pre></div>
-<p><img alt="png" src="../c_plotting_files/c_plotting_9_1.png" /></p>
+<p><img alt="png" src="../c_plotting_files/c_plotting_9_2.png" /></p>
 <p>We can also plot in frequency domain by specifying the omega limits</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1" href="#__codelineno-3-1"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_res</span><span class="p">(</span> <span class="n">result</span><span class="p">,</span> <span class="n">omega_max</span> <span class="o">=</span> <span class="mi">5</span><span class="p">,</span> <span class="n">omega_min</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">plot_labels</span> <span class="o">=</span> <span class="n">plot_labels</span> <span class="p">)</span>
 </span></code></pre></div>
