--- a/tutorials/h_rabi_oscillations/index.html
+++ b/tutorials/h_rabi_oscillations/index.html
@@ -137,10 +137,12 @@
 </span><span id="__span-1-10"><a id="__codelineno-1-10" name="__codelineno-1-10" href="#__codelineno-1-10"></a><span class="p">)</span>
 </span><span id="__span-1-11"><a id="__codelineno-1-11" name="__codelineno-1-11" href="#__codelineno-1-11"></a><span class="n">atom</span><span class="o">.</span><span class="n">show_res</span><span class="p">(</span><span class="n">result</span><span class="p">,</span> <span class="n">plot_only</span> <span class="o">=</span> <span class="p">[</span><span class="n">atom</span><span class="o">.</span><span class="n">homo</span><span class="p">,</span> <span class="n">atom</span><span class="o">.</span><span class="n">homo</span><span class="o">+</span><span class="mi">1</span><span class="p">],</span> <span class="n">plot_labels</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;homo&quot;</span><span class="p">,</span> <span class="s2">&quot;lumo&quot;</span><span class="p">],</span> <span class="n">show_illumination</span> <span class="o">=</span> <span class="kc">False</span><span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>finished timestep 0
-RHS compiled
+<div class="language-text highlight"><pre><span></span><code>RHS compiled
+
+
+100.0 %
 </code></pre></div>
-<p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_5_1.png" /></p>
+<p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_5_2.png" /></p>
 <h2 id="coupling-to-a-flake">Coupling to a Flake</h2>
 <p>We combine the TLS with a graphene flake in the top position above an atom.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-2-1"><a id="__codelineno-2-1" name="__codelineno-2-1" href="#__codelineno-2-1"></a><span class="kn">import</span> <span class="nn">jax.numpy</span> <span class="k">as</span> <span class="nn">jnp</span>
@@ -171,13 +173,15 @@ RHS compiled
 </span><span id="__span-4-10"><a id="__codelineno-4-10" name="__codelineno-4-10" href="#__codelineno-4-10"></a><span class="n">flake_with_atom</span><span class="o">.</span><span class="n">show_res</span><span class="p">(</span> <span class="n">result</span><span class="p">,</span> <span class="n">plot_only</span> <span class="o">=</span> <span class="p">[</span><span class="mi">9</span><span class="p">,</span><span class="mi">10</span><span class="p">],</span> <span class="n">show_illumination</span> <span class="o">=</span> <span class="kc">False</span> <span class="p">)</span>
 </span></code></pre></div>
 <p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_12_0.png" /></p>
-<div class="language-text highlight"><pre><span></span><code>finished timestep 0
-RHS compiled
+<div class="language-text highlight"><pre><span></span><code>RHS compiled
 
 
 No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.
+
+
+100.0 %
 </code></pre></div>
-<p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_12_3.png" /></p>
+<p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_12_4.png" /></p>
               
             </div>
           </div><footer>
