--- a/tutorials/i_linear_response/index.html
+++ b/tutorials/i_linear_response/index.html
@@ -150,8 +150,10 @@
 </span><span id="__span-3-5"><a id="__codelineno-3-5" name="__codelineno-3-5" href="#__codelineno-3-5"></a>    <span class="n">illumination</span><span class="o">=</span><span class="n">pulse</span><span class="p">,</span>
 </span><span id="__span-3-6"><a id="__codelineno-3-6" name="__codelineno-3-6" href="#__codelineno-3-6"></a><span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>finished timestep 0
-RHS compiled
+<div class="language-text highlight"><pre><span></span><code>RHS compiled
+
+
+100.0 %
 </code></pre></div>
 <p>The polarizability is given by <span class="arithmatex">\(p / E\)</span> (we only take the <span class="arithmatex">\(x\)</span> - component).</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-4-1"><a id="__codelineno-4-1" name="__codelineno-4-1" href="#__codelineno-4-1"></a><span class="n">omega_max</span> <span class="o">=</span> <span class="n">omegas_rpa</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>
