--- a/tutorials/a_getting_started/index.html
+++ b/tutorials/a_getting_started/index.html
@@ -275,8 +275,10 @@ For now, we will use a built-in shape: an hexagon with a base length of 10 Angst
 </span><span id="__span-12-5"><a id="__codelineno-12-5" name="__codelineno-12-5" href="#__codelineno-12-5"></a>    <span class="n">expectation_values</span> <span class="o">=</span> <span class="p">[</span><span class="n">my_first_flake</span><span class="o">.</span><span class="n">dipole_operator</span><span class="p">]</span> <span class="c1"># you can also omit the list for a single operator, but this is bad practice</span>
 </span><span id="__span-12-6"><a id="__codelineno-12-6" name="__codelineno-12-6" href="#__codelineno-12-6"></a>    <span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>finished timestep 0
-RHS compiled
+<div class="language-text highlight"><pre><span></span><code>RHS compiled
+
+
+100.0 %
 </code></pre></div>
 <p>If you want to compute expecation values of more operators, you can simply add them to the list. The result variable is a container for </p>
 <ol>
